[gd_scene load_steps=5 format=3 uid="uid://dudc7nau5a6oo"]

[ext_resource type="Script" path="res://Scenes/ball.gd" id="1_ofa7g"]
[ext_resource type="Texture2D" uid="uid://btjlgya15ktyp" path="res://assets/images/ball.png" id="2_jhabk"]
[ext_resource type="AudioStream" uid="uid://y57mmu5uvgsi" path="res://assets/audio/ballsound.mp3" id="3_7en5h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_12k04"]
radius = 9.0

[node name="Ball" type="Area2D"]
script = ExtResource("1_ofa7g")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 0.5)
scale = Vector2(0.59375, 0.59375)
texture = ExtResource("2_jhabk")

[node name="BallCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_12k04")

[node name="BallSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_7en5h")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
